@@ -1,6 +1,11 @@
 New in v1.1.13 (????/??/??)
 ---------------------------
 
+New options: --tempdir and --remote-tempdir. The first one sets the
+directory that rdiff-backup uses for temporary files on the local system.
+The second adds the --tempdir option with the given path when invoking
+rdiff-backup on remote systems. (Andrew Ferguson)
+
 Don't run the extended attributes test if rdiff-backup is run with
 the --no-eas option. Prevents hang in isolated cases. (Andrew Ferguson)
 
